tests/unit_tests/sema/binder_invalid_template_id_01.cc
// RUN: %cxx -verify %s

template <typename T>
int fn();

int x = fn<int, int>();  // expected-error {{invalid template-id 'fn <>'}}
